src/objects/PPI__c.object
<CustomObject>
    <fields>
        <fullName>Evaluation_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Evaluation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Households_Clients__c</fullName>
        <label>Number of Households/Clients</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Set</label>
        <referenceTo>Question_Set__c</referenceTo>
        <relationshipLabel>PPI</relationshipLabel>
        <relationshipName>PPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PPI</label>
    <nameField>
        <label>PPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>